changed form post url

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="login-page">
     <p class="top-heading">ARNOLD</p>
     <div class="form">
-      <form name="contactForm" id="startForm" action="" method="POST">
+      <form name="contactForm" id="startForm" action="https://fitness.botscrew.com/add" method="POST">
         <h1>I train with Arnold</h1>
         <p>Ready for an AI fitness trainer powered by rock hard pecs? Pack your gym bag, you’ve got a big workout ahead!</p>
         <div id="inputBlock">
