--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>I train with Arnold</h1>
         <p>Ready for an AI fitness trainer powered by rock hard pecs? Pack your gym bag, you’ve got a big workout ahead!</p>
         <div id="inputBlock">
-          <input id="phone" name="Phone" type="text" placeholder="Enter your phone number"/>
+          <input id="phone" name="phoneNumber" type="text" placeholder="Enter your phone number"/>
           <button type="button" id="start" onclick="">Start</button>
         </div>
         <p class="error-message">Please enter correct number</p>
