new error message design

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
           <input id="phone" name="phoneNumber" type="text" placeholder="Enter your phone number"/>
           <button type="button" id="start">Start</button>
         </div>
-        <p class="error-message">Please enter correct number</p>
+        <div class="error-message">
+          <img src="images/warning.svg">
+          <p>Oops! Please enter correct phone number</p>
+        </div>
       </form>
     </div>
   </div>
