--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <div class="login-page">
     <p class="top-heading">ARNOLD</p>
     <div class="form">
-      <form name="contactForm" id="startForm" method="POST" action="https://fitness.botscrew.com/add">
+      <form name="contactForm" id="startForm" method="POST" action="https://fitness.botscrew.com/add" target="mock_frame">
         <h1>I train with Arnold</h1>
         <p>Ready for an AI fitness trainer powered by rock hard pecs? Pack your gym bag, you’ve got a big workout ahead!</p>
         <div id="inputBlock">
           <input id="phone" name="phoneNumber" type="text" placeholder="Enter your phone number"/>
-          <button type="submit" id="start">Start</button>
+          <button type="button" id="start">Start</button>
         </div>
         <div class="error-message">
           <img src="images/warning.svg">
