fixed landing mobile styles

--- a/index.html
+++ b/index.html
@@ -34,11 +34,8 @@
   </div>
 
   <div class="slide-2">
-    <div class="row">
-      <div class="arnold-example col-md-offset-2 col-md-4">
-        <img src="images/iphone_example.png">
-      </div>
-      <div class="col-md-5 benefits-container">
+    <div class="row table-display">
+      <div class="col-xs-12 col-sm-push-5 col-sm-5 col-md-push-4 col-md-4 benefits-container table-cell middle">
         <div class="arnold-benefits">
           <h1 class="gradient">Just keep going. <img class="inline-emoji" src="images/imagine_emoji.png"></h1>
           <p>Ready for an AI fitness trainer powered by rock hard pecs? Pack your gym bag, you’ve got a big workout ahead!</p>
@@ -49,12 +46,16 @@
           </ul>
         </div>
       </div>
+
+      <div class="arnold-example table-cell col-xs-12 col-sm-pull-5 col-sm-5 col-md-pull-4 col-md-4">
+        <img src="images/iphone_example.png">
+      </div>
     </div>
   </div>
 
   <div class="slide-3">
-    <div class="row">
-      <div class="col-md-offset-2 col-md-4 benefits-container">
+    <div class="row table-display">
+      <div class="col-xs-12 col-sm-5 col-md-4 benefits-container table-cell middle">
         <div class="arnold-benefits">
           <h1 class="gradient">Just do it! <img class="inline-emoji" src="images/medal_emoji.png"></h1>
           <p>Ready for an AI fitness trainer powered by rock hard pecs? Pack your gym bag, you’ve got a big workout ahead!</p>
@@ -65,7 +66,7 @@
           </ul>
         </div>
       </div>
-      <div class="arnold-example col-md-4">
+      <div class="arnold-example table-cell col-xs-12 col-sm-5 col-md-4">
         <img src="images/iphone_example.png">
       </div>
     </div>
@@ -73,7 +74,7 @@
 
   <div class="slide-4">
     <div class="top">
-      <h1>No pain. No gain. <img class="inline-emoji" src="images/cup_emoji.png"></h1>
+      <h1>No pain. <span class="next-line">No gain.</span> <img class="inline-emoji" src="images/cup_emoji.png"></h1>
     </div>
     <div class="middle">
       <h1 class="gradient">They are talking about me <img class="inline-emoji" src="images/thought_emoji.png"></h1>
@@ -82,10 +83,10 @@
     </div>
     <div class="bottom">
       <div class="row">
-        <div class="col-md-offset-2 col-md-2 writing"><img src="images/Union.png"></div>
-        <div class="col-md-2 writing"><img src="images/Union.png"></div>
-        <div class="col-md-2 writing"><img src="images/Union.png"></div>
-        <div class="col-md-2 writing"><img src="images/Union.png"></div>
+        <div class="col-xs-offset-2 col-xs-4 col-sm-offset-2 col-sm-2 col-md-offset-2 writing"><img src="images/Union.png"></div>
+        <div class="col-xs-4 col-sm-2 writing"><img src="images/Union.png"></div>
+        <div class="col-xs-offset-2 col-xs-4 col-sm-2 writing"><img src="images/Union.png"></div>
+        <div class="col-xs-4 col-sm-2 writing"><img src="images/Union.png"></div>
       </div>
     </div>
   </div>
