fixed union bug

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="col-xs-offset-2 col-xs-4 col-sm-offset-2 col-sm-2 col-md-offset-2 writing"><img src="images/Union.png"></div>
         <div class="col-xs-4 col-sm-2 writing"><img src="images/Union.png"></div>
-        <div class="col-xs-offset-2 col-xs-4 col-sm-2 writing"><img src="images/Union.png"></div>
+        <div class="col-xs-offset-2 col-xs-4 col-sm-offset-0 col-sm-2 writing"><img src="images/Union.png"></div>
         <div class="col-xs-4 col-sm-2 writing"><img src="images/Union.png"></div>
       </div>
     </div>
