changed magazines logos

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     </div>
     <div class="bottom">
       <div class="row">
-        <div class="col-xs-offset-2 col-xs-4 col-sm-offset-2 col-sm-2 col-md-offset-2 writing"><img src="images/Union.png"></div>
-        <div class="col-xs-4 col-sm-2 writing"><img src="images/Union.png"></div>
-        <div class="col-xs-offset-2 col-xs-4 col-sm-offset-0 col-sm-2 writing"><img src="images/Union.png"></div>
-        <div class="col-xs-4 col-sm-2 writing"><img src="images/Union.png"></div>
+        <div class="col-xs-offset-2 col-xs-4 col-sm-offset-2 col-sm-2 col-md-offset-2 writing"><img src="images/verge.svg"></div>
+        <div class="col-xs-4 col-sm-2 writing"><img src="images/lifehacker.png"></div>
+        <div class="col-xs-offset-2 col-xs-4 col-sm-offset-0 col-sm-2 writing"><img src="images/tc.svg"></div>
+        <div class="col-xs-4 col-sm-2 writing"><img src="images/wired.svg"></div>
       </div>
     </div>
   </div>
