--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
 </head>
 <body>
   <div class="slide-1">
-    <div class="login-page">
-      <div class="top-heading">
-        <p>Arnold</p>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand">
+            <p>Arnold</p>
+          </a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
+    </nav>
+    <div class="login-page">
+      <!--<div class="top-heading">-->
+        <!--<p>Arnold</p>-->
+      <!--</div>-->
       <div class="form">
         <form name="contactForm" id="startTopForm" method="POST" action="https://fitness.botscrew.com/add" target="mock_frame">
         <!--<form name="contactTopForm" id="startTopForm" method="POST" action="http://requestb.in/1m0w1s51" target="mock_frame">-->
