added dynamic text

--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400" rel="stylesheet">
 </head>
 <body>
-  <div class="slide-1">
+  <div class="slide-1" id="home">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#arnoldNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           <a class="navbar-brand">
             <p>Arnold</p>
           </a>
         </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+        <div class="collapse navbar-collapse" id="arnoldNavbar">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#home" class="page-scroll">Home</a></li>
+            <li><a href="#press" class="page-scroll">Press</a></li>
+            <li><a href="#contact" class="page-scroll">Contact</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
     <div class="login-page">
@@ -32,7 +39,7 @@
       <div class="form">
         <form name="contactForm" id="startTopForm" method="POST" action="https://fitness.botscrew.com/add" target="mock_frame">
         <!--<form name="contactTopForm" id="startTopForm" method="POST" action="http://requestb.in/1m0w1s51" target="mock_frame">-->
-          <h1 class="gradient">I train with Arnold <img class="inline-emoji" src="images/bicep_emoji.png"></h1>
+          <h1 class="gradient"><span class="type-it"></span> with Arnold <img class="inline-emoji" src="images/bicep_emoji.png"></h1>
           <p>Ready for an AI fitness trainer powered by rock hard pecs? Pack your gym bag, you’ve got a big workout ahead!</p>
           <div class="inputBlock">
             <input id="phoneTop" name="phoneNumber" type="text" placeholder="Enter your phone number"/>
@@ -86,7 +93,7 @@
     </div>
   </div>
 
-  <div class="slide-4">
+  <div class="slide-4" id="press">
     <div class="top">
       <h1>No pain. <span class="next-line">No gain.</span> <img class="inline-emoji" src="images/cup_emoji.png"></h1>
     </div>
@@ -105,7 +112,7 @@
     </div>
   </div>
 
-  <div class="slide-5">
+  <div class="slide-5" id="contact">
     <div class="login-page">
       <div class="form">
         <!--<form name="contactBottomForm" id="startBottomForm" method="POST" action="http://requestb.in/1m0w1s51" target="mock_frame">-->
@@ -124,7 +131,17 @@
       </div>
     </div>
   </div>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="index.js"></script>
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/index.js"></script>
+  <script src="js/typed.js"></script>
+  <script defer>
+    $(".type-it").typed({
+      strings: ["Exercise^1000", "Rock^1000", "Travel^1000", "Workout^1000"]
+      , typeSpeed: 100
+      , loop: true
+      , startDelay: 100
+    });
+  </script>
 </body>
 </html>
