xs dynamic text new line

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="collapse navbar-collapse" id="arnoldNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#home" class="page-scroll">Home</a></li>
+            <li><a href="index.html" class="page-scroll">Home</a></li>
             <li><a href="#press" class="page-scroll">Press</a></li>
             <li><a href="#contact" class="page-scroll">Contact</a></li>
           </ul>
@@ -39,7 +39,7 @@
       <div class="form">
         <form name="contactForm" id="startTopForm" method="POST" action="https://fitness.botscrew.com/add" target="mock_frame">
         <!--<form name="contactTopForm" id="startTopForm" method="POST" action="http://requestb.in/1m0w1s51" target="mock_frame">-->
-          <h1 class="gradient"><span class="type-it"></span> with Arnold <img class="inline-emoji" src="images/bicep_emoji.png"></h1>
+          <h1 class="gradient"><span class="type-it"></span><span class="sub-heading"> with Arnold <img class="inline-emoji" src="images/bicep_emoji.png"></span></h1>
           <p>Ready for an AI fitness trainer powered by rock hard pecs? Pack your gym bag, you’ve got a big workout ahead!</p>
           <div class="inputBlock">
             <input id="phoneTop" name="phoneNumber" type="text" placeholder="Enter your phone number"/>
@@ -135,7 +135,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/typed.js"></script>
-  <script defer>
+  <script>
     $(".type-it").typed({
       strings: ["Exercise^1000", "Rock^1000", "Travel^1000", "Workout^1000"]
       , typeSpeed: 100
